angular/src/app/app.component.scss
@import "../sass/variables";
// have a different backgroound image depending on the the page
.page {
  background-color: #0b0d17;
  background-repeat: no-repeat;
  background-size: cover;

  &-home {
    background-image: url("../assets/home/background-home-mobile.jpg");
    @media (min-width: $medium) {
      background-image: url("../assets/home/background-home-tablet.jpg");
    }
    @media (min-width: $big) {
      background-image: url("../assets/home/background-home-desktop.jpg");
    }
  }

  &-destination {
    background-image: url("../assets/destination/background-destination-mobile.jpg");
    @media (min-width: $medium) {
      background-image: url("../assets/destination/background-destination-tablet.jpg");
    }
    @media (min-width: $big) {
      background-image: url("../assets/destination/background-destination-desktop.jpg");
    }
  }
  &-crew {
    background-image: url("../assets/crew/background-crew-mobile.jpg");
    @media (min-width: $medium) {
      background-image: url("../assets/crew/background-crew-tablet.jpg");
    }
    @media (min-width: $big) {
      background-image: url("../assets/crew/background-crew-desktop.jpg");
    }
  }
  &-technology {
    background-image: url("../assets/technology/background-technology-mobile.jpg");
    @media (min-width: $medium) {
      background-image: url("../assets/technology/background-technology-tablet.jpg");
    }
    @media (min-width: $big) {
      background-image: url("../assets/technology/background-technology-desktop.jpg");
    }
  }
}

